@@ -4,6 +4,9 @@ Neuro Pro Changelog
 
 Version 2.0.1 (04-30-11)
 -Updated PressTrends code. 
+-Added Pinterest social icon. 
+-CSS fix for fallback menu. 
+
 
 Version 2.0 (04-17-11)
 -Moved to CyberChimps Response Core Framework. 
